_error page renamed tto 404

--- a/data/getting-started-with-opensource.mdx
+++ b/data/getting-started-with-opensource.mdx
@@ -21,23 +21,23 @@ First we need to find an open source project which aligns with our current knowl
 Open [github.com](https://github.com) and sign in to your accout if you haven't. Then navigate to **issues** tab situated in navbar.
 
 <Image
-  src="/posts/getting-started-with-opensource/issues.png"
+  src={`/posts/getting-started-with-opensource/issues.png`}
   height={96}
   width={1900}
-  layout="responsive"
-  objectFit="cover"
-  alt="issues tab"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`issues tab`}
 />
 
 After opening the issues tab we will get to see a page like this where all the magic will begin.
 
 <Image
-  src="/posts/getting-started-with-opensource/issues-page.png"
+  src={`/posts/getting-started-with-opensource/issues-page.png`}
   height={912}
   width={1900}
-  layout="responsive"
-  objectFit="cover"
-  alt="issues page"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`issues page`}
 />
 
 Now we will utilize github's powerful search functionality to query through open source projects and find one to contribute to.
@@ -63,12 +63,12 @@ you can also learn more about these filters over [here](https://docs.github.com/
 Now after hitting search with these filters you will get results somewhat like this.
 
 <Image
-  src="/posts/getting-started-with-opensource/selected-issue.png"
+  src={`/posts/getting-started-with-opensource/selected-issue.png`}
   height={900}
   width={1890}
-  layout="responsive"
-  objectFit="cover"
-  alt="filtered issues"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`filtered issues`}
 />
 
 Now you will be able to see lots of repositories with <InlineCode>good first issue</InlineCode> label. Go through some of the issue statement and figure out which
@@ -79,24 +79,24 @@ that the author of this issue has described the problem to be solved. If it seem
 confusing to you,ask questions about it in the comment section. Don't be shy!
 
 <Image
-  src="/posts/getting-started-with-opensource/issue-desc.png"
+  src={`/posts/getting-started-with-opensource/issue-desc.png`}
   height={930}
   width={1890}
-  layout="responsive"
-  objectFit="cover"
-  alt="issue description"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`issue description`}
 />
 
 After making it all clear ask the maintainer of the project to assign it to you. Also ask him/her on where to begin if you are unable to find the problem in the code base (which usually happens when you face a huge code base for the first time).
 Also ask for help whenever you get stuck because this improves you communication skills which is an essential thing to build up if you want to work in a team.
 
 <Image
-  src="/posts/getting-started-with-opensource/issue-info.png"
+  src={`/posts/getting-started-with-opensource/issue-info.png`}
   height={830}
   width={1890}
-  layout="responsive"
-  objectFit="cover"
-  alt="issue description"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`issue description`}
 />
 
 ### Forking and Cloning the project
@@ -109,12 +109,12 @@ After reading it, we will now **fork** the repository into our account that is w
 **your_username/project_name**. Now we will **clone** the project into our local machine using the **HTTPS** method. Click on the green **Code** button and then copy the **HTTPS** url.
 
 <Image
-  src="/posts/getting-started-with-opensource/clone.png"
+  src={`/posts/getting-started-with-opensource/clone.png`}
   height={910}
   width={1890}
-  layout="responsive"
-  objectFit="cover"
-  alt="clone the project"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`clone the project`}
 />
 
 Now open your terminal (I assume that you have **git** installed) and run the following the command to clone the project.
@@ -151,12 +151,12 @@ After making your changes now we are ready for the most exciting part of this en
 The changes that I made were adding new utility classes for input validation label of input component.
 
 <Image
-  src="/posts/getting-started-with-opensource/changes.png"
+  src={`/posts/getting-started-with-opensource/changes.png`}
   height={945}
   width={1830}
-  layout="responsive"
-  objectFit="cover"
-  alt="changes made"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`changes made`}
 />
 
 you can also see the changes made using <InlineCode>git diff</InlineCode> command.
@@ -211,12 +211,12 @@ Now while creating a pull request you must provide the information about the cha
 Now to create a pull request visit the forked repository (you can find it in your list of repositories) in your github account. There you can find a green button named **compare & pull request**. Click it to visit the page shown below and describe the changes you made.
 
 <Image
-  src="/posts/getting-started-with-opensource/pull-req.png"
+  src={`/posts/getting-started-with-opensource/pull-req.png`}
   height={895}
   width={1880}
-  layout="responsive"
-  objectFit="cover"
-  alt="pull request made"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`pull request made`}
 />
 
 Once you have created the pull request, now we just need to wait for our changes to be approved and merged by the maintainer.
@@ -229,12 +229,12 @@ It might happen that the maintainer may request a further change if he/she is no
 Once your pull request gets merged with the **main branch** you will get a notification similar to this.
 
 <Image
-  src="/posts/getting-started-with-opensource/merged.png"
+  src={`/posts/getting-started-with-opensource/merged.png`}
   height={915}
   width={1890}
-  layout="responsive"
-  objectFit="cover"
-  alt="pull request merged"
+  layout={`responsive`}
+  objectFit={`cover`}
+  alt={`pull request merged`}
 />
 
 ## Conclusion
