update MDX image component

--- a/data/getting-started-with-opensource.mdx
+++ b/data/getting-started-with-opensource.mdx
@@ -20,25 +20,27 @@ First we need to find an open source project which aligns with our current knowl
 
 Open [github.com](https://github.com) and sign in to your accout if you haven't. Then navigate to **issues** tab situated in navbar.
 
-<Image
-  src={`/posts/getting-started-with-opensource/issues.png`}
-  height={96}
-  width={1900}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`issues tab`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/issues.png"
+    title="issues tab"
+    alt="issues tab"
+    height={96}
+    width={1900}
+  />
+</figure>
 
 After opening the issues tab we will get to see a page like this where all the magic will begin.
 
-<Image
-  src={`/posts/getting-started-with-opensource/issues-page.png`}
-  height={912}
-  width={1900}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`issues page`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/issues-page.png"
+    title="issues page"
+    alt="issues page"
+    height={912}
+    width={1900}
+  />
+</figure>
 
 Now we will utilize github's powerful search functionality to query through open source projects and find one to contribute to.
 Go to the **search all issues** input box then type the following filters :
@@ -62,14 +64,15 @@ you can also learn more about these filters over [here](https://docs.github.com/
 
 Now after hitting search with these filters you will get results somewhat like this.
 
-<Image
-  src={`/posts/getting-started-with-opensource/selected-issue.png`}
-  height={900}
-  width={1890}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`filtered issues`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/selected-issue.png"
+    title="filtered issues"
+    alt="filtered issues"
+    height={900}
+    width={1890}
+  />
+</figure>
 
 Now you will be able to see lots of repositories with <InlineCode>good first issue</InlineCode> label. Go through some of the issue statement and figure out which
 one you want to work on. I decided to take number 3 issue with repository named
@@ -78,26 +81,28 @@ is an easy topic to work on as a beginner. After opening the issue, we can see
 that the author of this issue has described the problem to be solved. If it seems
 confusing to you,ask questions about it in the comment section. Don't be shy!
 
-<Image
-  src={`/posts/getting-started-with-opensource/issue-desc.png`}
-  height={930}
-  width={1890}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`issue description`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/issue-desc.png"
+    title="issues description"
+    alt="issues description"
+    height={930}
+    width={1890}
+  />
+</figure>
 
 After making it all clear ask the maintainer of the project to assign it to you. Also ask him/her on where to begin if you are unable to find the problem in the code base (which usually happens when you face a huge code base for the first time).
 Also ask for help whenever you get stuck because this improves you communication skills which is an essential thing to build up if you want to work in a team.
 
-<Image
-  src={`/posts/getting-started-with-opensource/issue-info.png`}
-  height={830}
-  width={1890}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`issue description`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/issue-info.png"
+    title="issues information"
+    alt="issues information"
+    height={830}
+    width={1890}
+  />
+</figure>
 
 ### Forking and Cloning the project
 
@@ -108,14 +113,15 @@ After reading it, we will now **fork** the repository into our account that is w
 **main branch** of the current project. You can find the fork button at the top right corner of the project page. After that you will observe that the project has been forked and the repository name changes to
 **your_username/project_name**. Now we will **clone** the project into our local machine using the **HTTPS** method. Click on the green **Code** button and then copy the **HTTPS** url.
 
-<Image
-  src={`/posts/getting-started-with-opensource/clone.png`}
-  height={910}
-  width={1890}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`clone the project`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/clone.png"
+    title="cloning the project"
+    alt="cloning the project"
+    height={910}
+    width={1890}
+  />
+</figure>
 
 Now open your terminal (I assume that you have **git** installed) and run the following the command to clone the project.
 
@@ -150,14 +156,15 @@ After making your changes now we are ready for the most exciting part of this en
 
 The changes that I made were adding new utility classes for input validation label of input component.
 
-<Image
-  src={`/posts/getting-started-with-opensource/changes.png`}
-  height={945}
-  width={1830}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`changes made`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/changes.png"
+    title="changes made"
+    alt="changes made"
+    height={945}
+    width={1830}
+  />
+</figure>
 
 you can also see the changes made using <InlineCode>git diff</InlineCode> command.
 Now lets push the changes we made. The following commands will help you push the changes.
@@ -210,14 +217,15 @@ Now while creating a pull request you must provide the information about the cha
 
 Now to create a pull request visit the forked repository (you can find it in your list of repositories) in your github account. There you can find a green button named **compare & pull request**. Click it to visit the page shown below and describe the changes you made.
 
-<Image
-  src={`/posts/getting-started-with-opensource/pull-req.png`}
-  height={895}
-  width={1880}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`pull request made`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/pull-req.png"
+    title="making pull request"
+    alt="making pull request"
+    height={895}
+    width={1880}
+  />
+</figure>
 
 Once you have created the pull request, now we just need to wait for our changes to be approved and merged by the maintainer.
 
@@ -228,14 +236,15 @@ It might happen that the maintainer may request a further change if he/she is no
 
 Once your pull request gets merged with the **main branch** you will get a notification similar to this.
 
-<Image
-  src={`/posts/getting-started-with-opensource/merged.png`}
-  height={915}
-  width={1890}
-  layout={`responsive`}
-  objectFit={`cover`}
-  alt={`pull request merged`}
-/>
+<figure>
+  <img
+    src="/posts/getting-started-with-opensource/merged.png"
+    title="pull request merged"
+    alt="pull request merged"
+    height={915}
+    width={1890}
+  />
+</figure>
 
 ## Conclusion
 
