fixed spelling mistakes in blog

--- a/data/getting-started-with-opensource.mdx
+++ b/data/getting-started-with-opensource.mdx
@@ -49,8 +49,8 @@ Now lets understand the meaning of each of these filters.
   major language is javascript.
 - `label:"good first issue"` - This refers to issues that
   have a good first issue label on them which means those issues are good for people
-  who are beginners to open source. sometimes you can only find similar label as
-  first timers only.
+  who are beginners to open source. sometimes you can also find similar label such as
+  `first timers only`.
 
 you can also learn more about these filters over [here](https://docs.github.com/en/github/searching-for-information-on-github/searching-on-github/searching-issues-and-pull-requests).
 
@@ -152,7 +152,7 @@ Now lets push the changes we made. The following commands will help you push the
   then we will lose the previous state of the code base and hence cannot access it
   if we need it further along the way.
 - `git add .` - This command lets you add all the files to
-  git staging area which contains a list of all the files you have recently changed.
+  git staging area which contains a list of all the files you have changed recently.
 - `git commit -m "commit_message"` - This command lets you
   commit (its like taking a snapshot of your repository) the changes to your local
   repository with a commit message which usually describes briefly the changes you
@@ -220,4 +220,4 @@ Once your pull request gets merged with the **main branch** you will get a notif
 
 I hope this was helpful and engaging. I tried to make the process in details as much as possible. If you face any kind of problem related to this process or if you find anything I missed to cover on this topic, please let me know on [Twitter](https://twitter.com/swarup4741).
 
-Consider given it a like or any reaction you think it deserves (if not then thanks for reading so far).
+Consider giving it a like or any reaction you think it deserves (if not then thanks for reading so far).
